--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1875,38 +1875,6 @@ body {
 }
 
 
-
-
-
-.blog {
-    position: relative;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    width: 700px;
-    max-width: 75%;
-    height: 100%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    margin: 0 auto
-}
-
-
-
-
-
-
-
-
-
 .header .img-center {
     display: block;
     margin : 0 auto;
@@ -1950,3 +1918,81 @@ body {
   .btn-group a:hover {
     background-color: #bf616a;
   }
+
+
+
+
+
+
+  .blog {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 900px;
+    max-width: 75%;
+    height: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    margin: 0 auto;
+}  
+
+@media screen and (max-width: 600px) {
+    .blog {
+        width: 100%;
+        max-width: 100%;
+        padding-top: 150px !important;
+    }
+}
+
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(250px, 1fr));
+    grid-gap: 20px;
+    align-items: stretch;
+  }
+
+
+@media screen and (max-width: 600px) {
+    .grid {
+        grid-template-columns: repeat(2, minmax(100px, 1fr));
+    }
+}
+    
+.grid > article {
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
+  }
+  
+.grid > article img {
+    max-width: 100%;
+  }
+  
+.grid .text {
+    padding: 20px;
+  }
+
+@media screen and (max-width: 600px) {
+    .grid .text > h1 {
+        font-size:0.5em;
+    }
+}
+
+
+  
+
+
+  
+
+  
+
+  
